# pr2_movement_routines

./: CMakeLists.txt  LICENSE  mylaserdata.bag  package.xml  sensor_manager.launch.xml  setup.py
launch/: move.launch  myfile.launch
nodes/: gazebo_test.cpp  real_test.cpp  testfile.cpp
scripts/: arWorldModel.py  bag2mat.py  extractMarkers.py  recordInteraction.py
setup_repos/: setupscript.sh
